test/conformance/chainsaw/generate/clusterpolicy/standard/clone/sync/cpol-clone-list-sync-orphan-downstream-delete-policy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cpol-clone-list-sync-orphan-delete-policy-ns
