test/conformance/chainsaw/generate/clusterpolicy/standard/clone/sync/cpol-clone-list-sync-orphan-downstream-delete-policy/source-manifests.yaml
apiVersion: v1
kind: Secret
metadata:
  name: image-secret
  namespace: default
  labels:
    allowedToBeCloned: "true"
type: kubernetes.io/basic-auth
stringData:
  username: admin
  password: not-a-real-secret
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: bootstrap-config
  namespace: default
  labels:
    allowedToBeCloned: "true"
data:
  initial_lives: "15"
