test/conformance/chainsaw/generate/clusterpolicy/standard/clone/sync/cpol-clone-list-sync-orphan-downstream-delete-policy/resource-configmap-assert.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: bootstrap-config
  namespace: cpol-clone-list-sync-orphan-delete-policy-ns
