test/conformance/chainsaw/generate/clusterpolicy/standard/clone/sync/cpol-clone-list-sync-orphan-downstream-delete-policy/resource-orphan-assert.yaml
apiVersion: v1
kind: Secret
metadata:
  name: image-secret
  namespace: cpol-clone-list-sync-orphan-delete-policy-orphan-ns
type: kubernetes.io/basic-auth
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: bootstrap-config
  namespace: cpol-clone-list-sync-orphan-delete-policy-orphan-ns
