test/conformance/chainsaw/generate/clusterpolicy/standard/clone/sync/cpol-clone-list-sync-orphan-downstream-delete-policy/resource-secret-assert.yaml
apiVersion: v1
kind: Secret
metadata:
  name: image-secret
  namespace: cpol-clone-list-sync-orphan-delete-policy-ns
type: kubernetes.io/basic-auth
